--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-      "g": "git add . && git commit -m \"Initial commit\" && git push -f",
+      "g": "git add . && git commit -m \"Initial commit\" && git push origin HEAD -f",
     "dev": "flareact dev",
     "deploy": "flareact publish"
   },
